# marketing-effectiveness-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: streamlit_app.py
docs/: architecture.html  architecture.md  case-study.html  case-study.md  data-contract.html  data-dictionary.md  deployment.md  index.html  phase-0-project-brief.md  phase-1-data-foundation.md  phase-10-incrementality-calibration.md  phase-11-experiment-evidence-upload.md  phase-12-evidence-governance.md  phase-13-profit-aware-planning.md  phase-14-bayesian-mmm-foundations.md  phase-15-constrained-budget-optimization.md  phase-16-real-data-connectors.md  phase-17-weekly-assembly-pipeline.md  phase-18-source-diagnostics.md  phase-19-expanded-connectors.md  phase-2-analyst-dashboard.md  phase-20-model-run-reporting.md  phase-21-recommendation-readiness.md  phase-22-run-manifest.md  phase-23-manifest-comparison.md  phase-24-customer-data-model.md  phase-25-customer-cohort-intelligence.md  phase-26-empirical-clv-lapse-risk.md  phase-27-crm-incrementality.md  phase-28-retention-action-planner.md  phase-29-crm-experiment-design.md  phase-3-baseline-econometrics.md  phase-30-crm-experiment-brief-export.md  phase-31-crm-experiment-artifact-comparison.md  phase-32-crm-experiment-portfolio-planning.md  phase-33-crm-portfolio-eligibility.md  phase-34-crm-audience-assignment-export.md  phase-35-crm-portfolio-audience-export.md  phase-36-crm-portfolio-calendar.md  phase-37-crm-portfolio-readout.md  (+18 more)
scripts/: build_public_mmm_dataset.py  build_stakeholder_brief.py  generate_demo_data.py  governance_demo.py  load_public_data.py
tests/: test_access.py  test_analytics.py  test_artifacts.py  test_assembly.py  test_bayesian.py  test_budget.py  test_calibration.py  test_mmm.py  (+11 more)
(+26 files in other folders)
