[project]
name = "marketing-effectiveness-lab"
version = "0.1.0"
description = "Marketing effectiveness, MMM, causal inference, and budget optimisation lab for fashion ecommerce."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=6.0",
    "statsmodels>=0.14",
    "streamlit>=1.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
