[project]
name = "marketing-effectiveness-lab"
version = "0.1.0"
description = "Marketing effectiveness, MMM, causal inference, and budget optimisation lab for fashion ecommerce."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=6.0",
    "statsmodels>=0.14",
    "streamlit>=1.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
# Optional: only needed to read the real public dataset (UCI Online Retail II .xlsx)
# via scripts/load_public_data.py. The package and tests do not require it.
data = [
    "openpyxl>=3.1",
]
# Optional: only needed to render the stakeholder brief to PDF via
# scripts/build_stakeholder_brief.py. The package and tests do not require it.
brief = [
    "reportlab>=4.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
